if (STATICPLUGINS)
	add_definitions(-DQT_STATICPLUGIN)
endif (STATICPLUGINS)

add_subdirectory(MainWindow)
add_subdirectory(ConfigWindow)
add_subdirectory(FileBrowser)
add_subdirectory(MediaController)
add_subdirectory(Playlist)
add_subdirectory(PlayToolBar)
add_subdirectory(QuickSettings)
add_subdirectory(StatusBar)
add_subdirectory(VideoWidget)
add_subdirectory(Welcome)
add_subdirectory(FindSubtitles)
#add_subdirectory(OSD)
